# grims

./: .gitignore  CLAUDE.md  DATA.md  LICENSE  README.md  bown_patent_implementation_map.md  pyproject.toml
docs/chime/: CHANGELOG.md  CITATION.cff  PUBLISH_READINESS.md  README.md
docs/grims/: README.md
examples/chime/: end_to_end_demo.py  multi_target_survey.py  segment_quality_check.py  trappist1_analysis.py  validation_wasp39.py  wasp39_channel_map.py  wasp39_full_fit.py
results/chime/: data_manifest.json
results/chime/channel_survey/: FINDING.md  expanded_survey.json  finding_data.json  finding_nod_quality_variation.txt  (+5 more)
results/grims/: calibration_audit_memo.md  calibration_audit_results.json  calibration_audit_table.csv  colored_jackknife.json  consistency_test.json  download_queue.json  full_catalog_colored_results.json  full_catalog_results.json  gwtc_full_catalog.json  inspiral_informed_kappa_results.json  phase3_jackknife.json  phase3_results.json  phase3_robustness.json
scripts/grims/: analyze_optimal_segment_duration.py  calibration_audit.py  check_data.py  debias_estimator.py  diagnose_estimator_bias.py  download_and_analyze.py  download_and_analyze_v2.py  download_multidet.py  generate_overview_figure.py  o5_projection.py  refresh_catalog.py  refresh_download_queue.py  run_colored_analysis.py  run_full_catalog.py  run_inspiral_informed_kappa.py  run_null_campaign.py  run_phase1_analysis.py  run_phase2_analysis.py  run_phase3_analysis.py  run_robustness_analysis.py  tasks_3_through_6.py  validate_gw200224.py
src/bown_instruments/: __init__.py  cli.py
tests/chime/: test_channel_map.py  test_diversity.py  test_ephemeris.py  test_extract.py  test_transit_fit.py
tests/grims/: test_bridge.py  test_excess_diagnostics.py  test_grims_e2e.py  test_harmonic_structure.py  test_null_distribution.py  test_phase_locked_latent_amplitude.py
tunnelling/: README.md  seismic_lookahead.py  synthetic_demo.py
(+39 files in other folders)
