[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bown-instruments"
version = "0.2.0"
description = "Astrophysical measurement instruments built on Bown's engineering principles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Hunter Bown", email = "hunter@shannonlabs.dev"},
]
keywords = [
    "astrophysics", "measurement", "signal processing",
    "jwst", "exoplanet", "transit spectroscopy", "channel quality",
    "gravitational waves", "ringdown", "quasinormal modes",
    "diversity combining", "self-test", "instrument diagnostics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
chime = [
    "astropy>=5.3",
    "astroquery>=0.4.7",
]
grims = [
    "h5py>=3.8",
    "qnm>=0.4",
]
all = [
    "bown-instruments[chime,grims]",
]
dev = [
    "bown-instruments[all]",
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.scripts]
bown = "bown_instruments.cli:main"

[project.urls]
Repository = "https://github.com/Hmbown/bown-instruments"
"Issue Tracker" = "https://linear.app/shannon-labs/project/bown-instruments-9a003df614d9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
